fix: overflow wrap anywhr anywher

--- a/agir/front/components/genericComponents/style.scss
+++ b/agir/front/components/genericComponents/style.scss
@@ -234,6 +234,6 @@ output {
   color: $black500;
 }
 
-p {
+* {
   overflow-wrap: anywhere;
 }
